# personal-data

./: .gitignore  _dagster.yaml  pyproject.toml  workspace.yaml
bank_statements/: pyproject.toml
bank_statements/bank_statements/: assets.py  definitions.py  transformations.py
bank_statements/bank_statements/assets/: curated.py  monzo.py  sainsburys.py  triodos.py
bank_statements/bank_statements/helpers/: db.py  pandas.py  resources.py  settings.py
bank_statements/bank_statements/resources/: definitions.py  duckdb_io_manager.py  pdf_parser.py
scripts/: scripts.py
