[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster-webserver>=1.9.6",
    "dagster>=1.9.6",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
local = "scripts.scripts:local"
db = "scripts.scripts:db"
validate = "scripts.scripts:validate"

[tool.setuptools.packages]
find = {}
