[project]
name = "bank_statements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-webserver>=1.9.8",
    "docling>=2.15.1",
    "pandas>=2.2.3",
    "polars>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "bank_statements.bank_statements.definitions"
project_name = "bank_statements"
